// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormAddPassword when active renders correctly 1`] = `
<View>
  <MessageBox
    display="warn"
    messages={
      Array [
        "Uma senha forte, por favor.",
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Defina uma senha"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Repita a senha"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Enviar"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`FormAddPassword when passwords match and the password is strong renders correctly 1`] = `
<View>
  <MessageBox
    display="warn"
    messages={
      Array [
        "Uma senha forte, por favor.",
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Defina uma senha"
      secureTextEntry={true}
      textContentType="password"
      value="s3cuRe!!!"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Repita a senha"
      secureTextEntry={true}
      textContentType="password"
      value="s3cuRe!!!"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Enviar"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`FormAddPassword when passwords match and the password is weak renders correctly 1`] = `
<View>
  <MessageBox
    display="warn"
    messages={
      Array [
        "Uma senha forte, por favor.",
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Defina uma senha"
      secureTextEntry={true}
      textContentType="password"
      value="abc"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Repita a senha"
      secureTextEntry={true}
      textContentType="password"
      value="abc"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Enviar"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`FormAddPassword when there's an error renders correctly 1`] = `
<View>
  <MessageBox
    display="error"
    messages={
      Array [
        "Campo de senha vazio.",
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="loading"
      onChangeText={[Function]}
      placeholder="Defina uma senha"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="loading"
      onChangeText={[Function]}
      placeholder="Repita a senha"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="loading"
      label="Enviar"
      onPress={[Function]}
    />
  </View>
</View>
`;
